Fixed buttons issue and alignment on step page

--- a/Cooking Pan/YelpCook/public/css/minimal.css
+++ b/Cooking Pan/YelpCook/public/css/minimal.css
@@ -149,6 +149,7 @@ body {
 
 .jumbotron {
 	background: none;
-  margin: 0 none;
-  padding: 0;
+ /* margin-top: 0;
+  margin-bottom: 0;*/
+  /*padding: 0;*/
 }
