--- a/Cooking Pan/YelpCook/public/css/step.css
+++ b/Cooking Pan/YelpCook/public/css/step.css
@@ -1,26 +1,36 @@
 #stepImage{
 	/*border: 3px solid black;*/
 	float: left;
-	width: 55%;
-	padding-left: 50px;
+	width: 50%;
+	/*padding-left: 100px;
+	margin-left: 100px; */
+	margin-left: 70px;
+	margin-right: 0px;
 	padding-right: 0;
 	/*padding-bottom: 2px;*/
 }
 
 
-#stepText{
-	border: 3px solid black;
-	float: left;
-	width: 50%;
-	padding: 30px;
-}
+
 
 .stepContainer{
-	margin-top: 0px;
-	width: 80%;
+	width: 90%;
+}
+	/*margin-top: 0px;
+	
 	padding: none 0;
+	text-align: center;
+	margin: 0 auto;
+}*/
+
+.stepTemp{
+	font-size: 500px;
+	margin: 0 auto;
 }
 
+.stepTimer{
+	margin: 0 auto;
+}
 /*.row{
 	margin-top: 0;
 	width: 80%;
